<resources>
    <string name="app_name">ParticipAct Brasil</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_welcome">ParticipAct</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_campaign">Campaign title</string>
    <string name="title_activity_task_picture">Pictures</string>
    <string name="title_activity_task_questionnaire">Questionnaire</string>
    <string name="error_no_network">Error communicating with the server. Check your connection and try again.</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_order">Ordenar</string>
    <string name="action_update">Atualizar Informações</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="action_register_facebook">Entrar com Facebook</string>
    <string name="action_register_google">Entrar com Google+</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="gcm_new_message">New Task Available!</string>
    <string name="card_label_descrizione">"Description: "</string>
    <string name="card_label_punti">"Points: "</string>
    <string name="card_label_sensori">"Sensors: "</string>
    <string name="card_label_durata">"Duration (in min): "</string>
    <string name="card_label_deadline">"Deadline: "</string>
    <string name="card_label_progress">"Completion (in %): "</string>
    <string name="error_login_dialog_title">Attention</string>
    <string name="error_login_dialog_bad_credential">Error in authentication. Check your username and password.</string>
    <string name="error_login_dialog_no_network">Error communicating with the server. Make sure the data connection.</string>
    <string name="error_login_dialog_ok_button" translatable="false">OK</string>
    <string name="card_label_deadline_date">"Available until:"</string>
    <string name="card_label_expiration_date">"Expires on: "</string>
    <string name="error_login_dialog_generic_error">An error occurred while authentication. Check the connection and try again later.</string>
    <string name="card_label_progress_threshold">"Minimum threshold of completion:"</string>
    <string name="welcome_main_card">Hello, ParticipAct is an experiment in participation. The goal is to involve students and volunteers in the first experiment in the world on a large scale of data collection using smartphones, which act as automatic sensors and interaction interfaces for the collection of information on users and on the context in which they are located.</string>
    <string name="welcome_news_beta">Please note that ParticipAct is currently still in testing so some functions may not be available. We invite you to contact us with any questionsDB, suggestions or impressions of use.</string>
    <string name="stats_completed_with_success">Task completed successfully:</string>
    <string name="stats_completed_with_failure">Task not completed successfully:</string>
    <string name="stats_rejected">Task rejected or expired:</string>
    <string name="task_not_exec">Geo Task can not be executed at this location</string>
    <string name="drawer_open" translatable="false">Participact</string>
    <string name="drawer_close" translatable="false">Participact</string>
    <string name="open_question_text">Open Question Text</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="action_photo_take_picture">Take a picture</string>
    <string name="activity_detecion">Activity Detection</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="set_timer">Set Timer</string>
    <string name="next">Next</string>
    <string name="task_not_compatible">Task is not compatible with the current version. Please update your client using the Play Store.</string>
    <string name="login_upper_case" translatable="false">LOGIN</string>
    <string name="battery_drain_description">The graph shows the average consumption of battery ParticipAct detected on a battery charge.</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="static_in_pocket">Static in your pocket</string>
    <string name="task_ParticipAct" translatable="false">Task ParticipAct</string>
    <string name="refresh">Refresh</string>
    <string name="task_activity_detection">Task Activity Detection </string>
    <string name="task_audio_detection">Task Audio Detection</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="reject">Reject</string>
    <string name="reject_confirmation">Once rejected this task will no longer be available. Are you sure you want to continue?</string>
    <string name="accept">Accept</string>
    <string name="pictures_to_take">Pictures to take</string>
    <string name="social_find_friends_button_uppercase">FIND YOUR FRIENDS</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google_plus" translatable="false">Google+</string>
    <string name="previous_short">Prev</string>
    <string name="licenses_error">Error: can\'t show licences.</string>
    <string name="licenses_title">Licenses</string>
    <string name="console_gen_description">The console allows you to activate or suspend the activities of the sensing system. Please note that the deactivation is not definitive, the system will return to normal after 8 hours.</string>
    <string name="console_gen_title">Main Console</string>
    <string name="console_task_description">From this form you can selectively turn off the active tasks. Attention, in this case the deactivation is final.</string>
    <string name="console_task_title">Task Console</string>
    <string name="friends_fragment_friends">Friends</string>
    <string name="friends_fragment_pending">Pending</string>
    <string name="friends_fragment_find">Find</string>
    <string name="friends_fragment_success_friend_remove">Successfully removed friend</string>
    <string name="friends_fragment_fail_friend_remove">Problem in removing friend</string>
    <string name="friends_fragment_success_request">Request handled correctly</string>
    <string name="friends_fragment_fail_request">Problem in handling the request</string>
    <string name="success_login">User authenticated</string>
    <string name="leaderboard_fragment_global">Global</string>
    <string name="leaderboard_fragment_social">Social</string>
    <string name="logout_description">This tab allows you to logout the user.</string>
    <string name="participact_notification">ParticipAct Notification</string>
    <string name="time_restore_success">Time properly restored</string>
    <string name="new_app_update">ParticipAct update</string>
    <string name="tap_to_update">Tap here to update</string>
    <string name="new_tasks_notification">New Tasks available!</string>
    <string name="error">Error:</string>
    <string name="hi">Hi</string>
    <string name="social_fragment_success_request">Request handled correctly</string>
    <string name="social_fragment_success_link_account">Account successfully connected</string>
    <string name="social_fragment_fail_link_account">Error in linking accounts</string>
    <string name="attention">Attention</string>
    <string name="wrong_time_details">We found that the date and time set on the device has changed. The normal operation of PartcipAct will be restored once we verify the validity of those changes. You need an internet connection</string>
    <string name="user_fragment_summary">Summary</string>
    <string name="user_fragment_badges" translatable="false">Badges</string>
    <string name="news_of">News of</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="no_active_tasks">No task is currently active.</string>
    <string name="no_available_tasks">No campaign available at the moment, swipe down to refresh</string>
    <string name="no_available_actions">No tasks pending at the moment</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_description">This card summarizes some information on your profile and in general the experiment.</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="photo_description">Photo description</string>
    <string name="take_picture_short">Take</string>
    <string name="of">of</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="questionnaire_description">Questionnaire description</string>
    <string name="complete_questionnaire">Complete</string>
    <string name="tasks_active_title">Active tasks</string>
    <string name="tasks_active_description">This card summarizes the information about the tasks that are currently running. </string>
    <string name="tasks_available_title">Available Tasks</string>
    <string name="tasks_available_description">his card summarizes the information about the tasks currently available.</string>
    <string name="activation_area">Activation Area</string>
    <string name="duration_dialogfragment_hour">hours</string>
    <string name="duration_dialogfragment_min">minutes</string>
    <string name="duration_dialogfragment_cacncel" translatable="false">Cancel</string>
    <string name="duration_dialogfragment_ok" translatable="false">Ok</string>
    <string name="duration_dialogfragment_days">days</string>
    <string name="pause">Pause Campaign</string>
    <string name="resume">Resume Campaign</string>
    <string name="description">Description</string>
    <string name="started">Started</string>
    <string name="expires_on">Expires on</string>
    <string name="dont_have_account">Don\'t you have an account?</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAIP1LPU_JR-pTGxz0fbUCNrR8-6T-Umrg
    </string>
    <string name="prompt_password_confirmation">Confirm password</string>
    <string name="label_network">NETWORK</string>
    <string name="label_general">GENERAL</string>
    <string name="settings_network_hint">By activating the item below, the app will only send data when connected to a Wi-Fi network. Use this option to save your 3G data plan.</string>
    <string name="prompt_use_wifi_only">Use Wi-Fi only</string>
    <string name="surname">Surname</string>
    <string name="fotgot_password">Forgot password?</string>
</resources>