<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_participact" />

    <!--Registration Form-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#afff">

        <EditText
            android:id="@+id/txtName"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtLastName"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/surname"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtEmail"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/txtPasswordConfirmation"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/prompt_password_confirmation"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#3eb4bf"
            android:text="Registrar"
            android:textColor="#FFF" />

    </LinearLayout>



</LinearLayout>



