<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                tools:context=".activities.campaign.CampaignDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="Status" />

            <TextView
                android:id="@+id/txtViewCampaignStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="Finalizada" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/started" />

            <TextView
                android:id="@+id/txtViewCreationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="15/03/2016 14:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/expires_on" />

            <TextView
                android:id="@+id/txtViewExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="21/03/2016 17:45" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:text="" />

        <TextView
            android:id="@+id/txtViewActivationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/activation_area"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview"

            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="62dp"
            android:apiKey="@string/google_maps_key"
            android:clickable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btReject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@android:color/holo_red_dark"
            android:text="@string/reject"
            android:textColor="#FFF"
            android:layout_marginRight="3dp"/>

        <Button
            android:id="@+id/btAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@android:color/holo_green_dark"
            android:text="@string/accept"
            android:textColor="#FFF"
            android:layout_marginLeft="3dp"/>

        <Button
            android:id="@+id/btPauseTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:visibility="gone"
            android:background="@android:color/holo_red_dark"
            android:text="@string/pause"
            android:textColor="#FFF"
            android:layout_marginLeft="3dp"/>

        <Button
            android:id="@+id/btResumeTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:visibility="gone"
            android:background="@android:color/holo_green_dark"
            android:text="@string/resume"
            android:textColor="#FFF"
            android:layout_marginLeft="3dp"/>

    </LinearLayout>

</RelativeLayout>