<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/login_background"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".activities.login.LoginActivity">

    <FrameLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/ic_launcher_participact"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#FFF"
                    android:textSize="16dp"
                    android:shadowColor="#000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/forms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Login form-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="20dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp"
                        android:background="#afff">

                        <EditText
                            android:id="@+id/email"
                            style="@style/EditTextBackground"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:maxLines="1" />


                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            style="@style/EditTextBackground"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionSend"
                            android:inputType="textPassword"
                            android:maxLines="1"/>


                        <Button
                            android:id="@+id/btSignIn"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="#3eb4bf"
                            android:text="@string/action_sign_in"
                            android:textColor="#FFF"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/btForgotPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@null"
                            android:textSize="12dp"
                            android:text="@string/fotgot_password"
                            android:textStyle="bold"
                            android:textColor="#333" />

                        <View android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#999" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="14dp"
                            android:textColor="#333"
                            android:gravity="center_horizontal"
                            android:text="@string/dont_have_account"/>

                        <Button
                            android:id="@+id/btRegister"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="6dp"
                            android:background="@null"
                            android:text="@string/action_register"
                            android:textColor="#333"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_marginTop="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_gravity="center_horizontal" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="180dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.5" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </FrameLayout>
</LinearLayout>
